--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,8 @@
   <div class="row">
     <div class="col-md-3">
       <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
-      100 followers
+      <b>Jenny Andrew and Kara</b><br>
+      10m followers
     </div>
     <div class="col-md-9">
     
